- correzione typos in Game - inizio stesura GameBoard - GameBoard: GameBoard(), setUpGameBoard(), setUpinitialRows(), nuovi metodi helper getCardEra() e checkAndUpdateEra()